--- a/_posts/linux/2015-04-06-ubuntu中文编码配置.md
+++ b/_posts/linux/2015-04-06-ubuntu中文编码配置.md
@@ -1,15 +1,13 @@
 ---
 layout: post
 title: ubuntu中文编码配置
-category: 环境配置
+category: linux
 tags: Optimization
 keywords: linux，环境配置
 description: 
 ---
 
-
 [TOC]
-
 
  linux服务器对中文的支持是一个一直让大家DT的问题，从系统语言配置、中文文件名支持到数据库乱码等偶会经常遇到。所以今天把编码中遇到的问题做一个简单的汇总。
 
@@ -55,9 +53,10 @@ en_US.UTF-8 UTF-8
 zh_CN.UTF-8 UTF-8
 ```
 
->    **注：**
->     **1.** 需要输入`source /etc/environment` 使得第一个文件配置生效
->     **2.** 输入`locale-gen ` 使得第二个配置生效
+>     **注：**
+>    
+>     **1.** 需要输入`source /etc/environment` 使得第一个文件配置生效  
+>     **2.**  输入`locale-gen ` 使得第二个配置生效
 >     **3.** 原来存在乱码的文件依旧会乱码，重新上传或者新建的中文文件显示正常，无乱码问题
 
 经过该步骤的修改，在系统输入locale显示如下:
@@ -90,6 +89,6 @@ LC_ALL=
     - 确保该数据库中每张表的编码是UTF-8【即table的编码是UTF-8】
 
 
->   **说明：**
->    1. 以上环境配置已经在本机测试成功
->    2. 关于环境配置的具体原理，至今没有了解清楚，希望懂得人给予讲解或者贴出相关链接，谢谢
+>     **说明：**
+>     1. 以上环境配置已经在本机测试成功
+>     2. 关于环境配置的具体原理，至今没有了解清楚，希望懂得人给予讲解或者贴出相关链接，谢谢
