--- a/_posts/环境配置/2014-02-11-Java开发环境配置及常见问题.md
+++ b/_posts/环境配置/2014-02-11-Java开发环境配置及常见问题.md
@@ -34,42 +34,45 @@ description:
 - 配置Myeclipse编码：略
 - 设置myeclipse自动生成的author等注释 
     - window－>preference－>java－>code    styple－>code Template 当你选择到这部的时候就会看见右侧有一个框显示出code这个选项，你点开这个选项，点一下他下面的New Java  files 然后你点edit按钮，把他的内容换成你的就可以了，如
-			```
-			${filecomment}
-			${package_declaration}
-			/**
-			* @author Tree E-mail:Tree@163.com
-			* @version 创建时间：${date} ${time}
-			* 类说明
-			*/
-			${typecomment}
-			${type_declaration}
-			```
+```
+${filecomment}
+${package_declaration}
+/**
+* @author Tree E-mail:Tree@163.com
+* @version 创建时间：${date} ${time}
+* 类说明
+*/
+${typecomment}
+${type_declaration}
+```
     - window－>preference－>java－>code    styple－>code Template -> Comments->Types
        
-	 ```
-	   /**
-			* @author ${user}
-			* ${date} ${time}
-			* ${tags}
-		*/
-	```
+```
+/**
+* @author ${user}
+* ${date} ${time}
+* ${tags}
+*/
+```
 
    修改为
 	
-	  ```
-		/**
-		 * @author Tree
-		 * ${date} ${time}
-		 * ${tags}
-		 * /
-	 ```
+```
+/**
+* @author Tree
+* ${date} ${time}
+* ${tags}
+* /
+```
 
 ###5. SVN插件安装
 
 在eclipse的Help->Eclipse Marketplace中，搜索框输入SVN,然后选择如下图所示的:
-![pic](../../public/img/_post/2014-02-11-001.png)
+
+![pic](../../../public/img/_post/2014-02-11-001.png)
+
 点击Install，然后全选安装即可。然后点击OK，自动重启即可使用。
+
 file->import->svn->从SVN检出项目即可使用
 
 
