--- a/_posts/环境配置/2014-02-11-Java开发环境配置及常见问题.md
+++ b/_posts/环境配置/2014-02-11-Java开发环境配置及常见问题.md
@@ -69,7 +69,7 @@ ${type_declaration}
 
 在eclipse的Help->Eclipse Marketplace中，搜索框输入SVN,然后选择如下图所示的:
 
-![pic](../../../public/img/_post/2014-02-11-001.png)
+![pic](./public/img/_post/2014-02-11-001.png)
 
 点击Install，然后全选安装即可。然后点击OK，自动重启即可使用。
 
