--- a/_posts/环境配置/2014-02-11-Java开发环境配置及常见问题.md
+++ b/_posts/环境配置/2014-02-11-Java开发环境配置及常见问题.md
@@ -69,7 +69,7 @@ ${type_declaration}
 
 在eclipse的Help->Eclipse Marketplace中，搜索框输入SVN,然后选择如下图所示的:
 
-![pic](http://xiangce.baidu.com/picture/detail/3ee8dbc28f3d979c28c89dbbecd929ab6500f123?from=dialog)
+![pic](http://image.baidu.com/detail/newindex?col=&tag=&pn=0&pid=20722268605&aid=408040751&user_id=531964699&setid=-1&sort=0&newsPn=&star=&fr=&from=2)
 
 点击Install，然后全选安装即可。然后点击OK，自动重启即可使用。
 
