--- a/_posts/环境配置/2014-02-11-Java开发环境配置及常见问题.md
+++ b/_posts/环境配置/2014-02-11-Java开发环境配置及常见问题.md
@@ -69,7 +69,7 @@ ${type_declaration}
 
 在eclipse的Help->Eclipse Marketplace中，搜索框输入SVN,然后选择如下图所示的:
 
-![pic](http://img3.imgtn.bdimg.com/it/u=963846522,3359668909&fm=21&gp=0.jpg)
+![pic](http://7xiif2.com1.z0.glb.clouddn.com/2014-02-11-001.png)
 
 点击Install，然后全选安装即可。然后点击OK，自动重启即可使用。
 
