--- a/_posts/环境配置/2014-02-11-Java开发环境配置及常见问题.md
+++ b/_posts/环境配置/2014-02-11-Java开发环境配置及常见问题.md
@@ -7,11 +7,11 @@ keywords: java 环境配置
 description: 
 ---
 
-###1. 下载和安装JDK
+###**1. 下载和安装JDK**
 
 - 略
 
-###2. 配置环境变量
+###**2. 配置环境变量**
 
 1. 我的电脑->属性->高级系统设置->环境变量
 2. 在“系统变量”中，设置3项属性，JAVA_HOME,PATH,CLASSPATH(大小写无所谓),若已存在则点击“编辑”，不存在则点击“新建”；
@@ -22,11 +22,11 @@ description:
 4. “开始”－>;“运行”，键入“cmd”；
 5. 键入命令“java -version”，“java”，“javac”几个命令，出现画面，说明环境变量配置成功；
 
-###3. Tomcat安装
+###**3. Tomcat安装**
 
 - 略
 
-###4. Myeclipse或者eclipse安装
+###**4. Myeclipse或者eclipse安装**
 需要做的工作如下：
 
 - 配置Tomcat服务器：略
@@ -65,7 +65,7 @@ ${type_declaration}
 * /
 ```
 
-###5. SVN插件安装
+###**5. SVN插件安装**
 
 在eclipse的Help->Eclipse Marketplace中，搜索框输入SVN,然后选择如下图所示的:
 
@@ -76,7 +76,7 @@ ${type_declaration}
 file->import->svn->从SVN检出项目即可使用
 
 
-###常见问题汇总：
+###**常见问题汇总：**
 1. 安装myeclipse出现failed to find a mian class in c:\windows\temp\的错误，然后中断安装
 
   - 原因：win7的程序运行权限控制十分严格，运行myeclipse 10的安装程序时，首先是将安装包解压到c:\windows\temp的临时文件夹下，再执行该文件夹下的真正安装程序。由于权限不够，系统提示不能找到安装程序主类。
