--- a/_posts/linux/2015-04-06-ubuntu中文编码配置.md
+++ b/_posts/linux/2015-04-06-ubuntu中文编码配置.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: ubuntu中文编码配置
-category: linux
-tags: 环境配置
+category: 配置
+tags: 环境配置 linux
 keywords: linux，环境配置
 description: 
 ---
