modify the article

--- a/_posts/配置/2014-02-11-Java开发环境配置及常见问题.md
+++ b/_posts/配置/2014-02-11-Java开发环境配置及常见问题.md
@@ -14,11 +14,13 @@ description:
 ###**2. 配置环境变量**
 
 1. 我的电脑->属性->高级系统设置->环境变量
-2. 在“系统变量”中，设置3项属性，JAVA_HOME,PATH,CLASSPATH(大小写无所谓),若已存在则点击“编辑”，不存在则点击“新建”；
-3. JAVA_HOME指明JDK安装路径，就是刚才安装时所选择的路径D:/java/jdk1.5.0_08，此路径下包括lib，bin，jre等文件夹（此变量最好设置，因为以后运行tomcat，eclipse等都需要依*此变量）
-    - Path使得系统可以在任何路径下识别java命令，设为：%JAVA_HOME%/bin;%JAVA_HOME%/jre/bin
-    > %JAVA_HOME%就是引用前面指定的JAVA_HOME；
-    - CLASSPATH为java加载类(class or lib)路径，只有类在classpath中，java命令才能识别，设为：.;%JAVA_HOME%/lib/dt.jar;%JAVA_HOME%/lib/tools.jar (要加.表示当前路径)
+2. 在“系统变量”中，设置3项属性，JAVA\_HOME,PATH,CLASSPATH(大小写无所谓),若已存在则点击“编辑”，不存在则点击“新建”；
+3. JAVA\_HOME指明JDK安装路径，就是刚才安装时所选择的路径D:/java/jdk1.5.0_08，此路径下包括lib，bin，jre等文件夹（此变量最好设置，因为以后运行tomcat，eclipse等都需要依*此变量）
+    - Path使得系统可以在任何路径下识别java命令，设为：%JAVA\_HOME%/bin;%JAVA\_HOME%/jre/bin
+    - CLASSPATH为java加载类(class or lib)路径，只有类在classpath中，java命令才能识别，设为：.;%JAVA\_HOME%/lib/dt.jar;%JAVA_HOME%/lib/tools.jar (要加.表示当前路径)
+  
+> %JAVA\_HOME%就是引用前面指定的JAVA\_HOME；
+
 4. “开始”－>;“运行”，键入“cmd”；
 5. 键入命令“java -version”，“java”，“javac”几个命令，出现画面，说明环境变量配置成功；
 
