--- a/_posts/配置/2014-02-11-Java开发环境配置及常见问题.md
+++ b/_posts/配置/2014-02-11-Java开发环境配置及常见问题.md
@@ -18,11 +18,10 @@ description:
 3. JAVA\_HOME指明JDK安装路径，就是刚才安装时所选择的路径D:/java/jdk1.5.0_08，此路径下包括lib，bin，jre等文件夹（此变量最好设置，因为以后运行tomcat，eclipse等都需要依*此变量）
     - Path使得系统可以在任何路径下识别java命令，设为：%JAVA\_HOME%/bin;%JAVA\_HOME%/jre/bin
     - CLASSPATH为java加载类(class or lib)路径，只有类在classpath中，java命令才能识别，设为：.;%JAVA\_HOME%/lib/dt.jar;%JAVA_HOME%/lib/tools.jar (要加.表示当前路径)
-  
-> %JAVA\_HOME%就是引用前面指定的JAVA\_HOME；
-
 4. “开始”－>;“运行”，键入“cmd”；
 5. 键入命令“java -version”，“java”，“javac”几个命令，出现画面，说明环境变量配置成功；
+
+> 第三步中%JAVA\_HOME%就是引用前面指定的JAVA\_HOME；
 
 ###**3. Tomcat安装**
 
