change the logo of website

--- a/_posts/配置/2014-02-11-Java开发环境配置及常见问题.md
+++ b/_posts/配置/2014-02-11-Java开发环境配置及常见问题.md
@@ -76,6 +76,19 @@ ${type_declaration}
 
 file->import->svn->从SVN检出项目即可使用
 
+###**6. maven插件安装**
+
+详见地址如下【亲测可行】：
+
+[http://dead-knight.iteye.com/blog/1841658](http://dead-knight.iteye.com/blog/1841658)
+[http://blog.csdn.net/guanning0109/article/details/26069277](http://blog.csdn.net/guanning0109/article/details/26069277)
+
+附:
+
+[Maven下载地址](http://maven.apache.org/download.cgi)
+
+[Maven插件下载链接](http://pan.baidu.com/s/1c06My4o)
+
 
 ###**常见问题汇总：**
 1. 安装myeclipse出现failed to find a mian class in c:\windows\temp\的错误，然后中断安装
