--- a/_posts/web/2015-04-30-文件上传的路径获取及回环问题.md
+++ b/_posts/web/2015-04-30-文件上传的路径获取及回环问题.md
@@ -2,7 +2,7 @@
 layout: post
 title: 文件上传的路径获取及回环问题
 category: web
-tags: web java
+tags: java web
 keywords: java 环境配置
 description: 
 ---
@@ -16,6 +16,7 @@ request.getRealPath()这个方法以及被淘汰，所以建议不要使用。
 - request.getSession().getServletContext()
 
 代码如下：
+
 ```
 String uploadPath = request.getSession().getServletContext().getRealPath("/");  
  ```
@@ -43,8 +44,9 @@ String path = RequestContext.class.getResource("").getPath();
 - 修改本机的配置文件C:\Windows\System32\drivers\etc下面有一个localhost的文件，你打开后可以看到# ::1 localhost的配置，你可以删除。其中你也可以修改本机的ip，例如你修改一下127.0.0.1为127.0.0.2，当你以后访问的时间127.0.0.2就是你的本机的ip了.
 
 
-
+<hr/>
 参考链接：
+
 [1] [ request.getRemoteAddr()获取的值的问题？](http://blog.csdn.net/liunian02050328/article/details/8088761)
 
 [2] [JavaEE 保存文件获取绝对路径getResource("")和servletContext.getRealPath("/") ](http://blog.csdn.net/fengshizty/article/details/28257927?utm_source=tuicool)
